--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,7 @@ platform = espressif32
 board = featheresp32
 framework = arduino
 monitor_speed = 115200
-upload_port = COM22
+upload_port = COM51
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/NTPClient@^3.2.1
